hphp/hack/test/typecheck/expression_trees/splice_err7.php.exp
ERROR: File "splice_err7.php", line 5, characters 23-27:
Splicing can only occur inside expression tree literals (between backticks) (Parsing[1002])
ERROR: File "splice_err7.php", line 5, characters 16-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 87, characters 5-29:
  Expected `ExampleExpression<_>`
  File "", line 0, characters 0-0:
  But got `(function($x): _)`
ERROR: File "splice_err7.php", line 5, characters 16-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 87, characters 5-29:
  Expected `ExampleExpression<_>`
  File "splice_err7.php", line 5, characters 16-27:
  But got `(function(Spliceable<_, mixed, _> $x): _)`
