hphp/hack/test/typecheck/expression_trees/splice_err7.php
<?hh
<<file:__EnableUnstableFeatures('expression_trees')>>

function f(): void {
  ExampleDsl`${$x ==> ${$x}}`;
}
